@@ -1,5 +1,5 @@
 #ifndef lint
-static const char RCSid[] = "$Id: m_mist.c,v 2.18 2014/07/08 18:25:00 greg Exp $";
+static const char RCSid[] = "$Id: m_mist.c,v 2.19 2018/11/13 19:58:33 greg Exp $";
 #endif
 /*
  * Mist volumetric material.
@@ -218,7 +218,8 @@ m_mist(		/* process a ray entering or leaving some mist */
 	}
 	rayvalue(&p);				/* calls rayparticipate() */
 	copycolor(r->rcol, p.rcol);		/* return value */
-	r->rt = r->rot + p.rt;
+	r->rmt = r->rot + p.rmt;
+	r->rxt = r->rot + p.rxt;
 	return(1);
 memerr:
 	error(SYSTEM, "out of memory in m_mist");
